--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -6,7 +6,8 @@
     "GIFTS": "Gifts",
     "REGULATION": "Regulation",
     "BOX_NOTATION": "Chest Notation",
-    "CRYPTING": "Crypting"
+    "CRYPTING": "Crypting",
+    "RESEARCH": "Research Costs"
   },
   "LAW": {
     "TITLE": "VKG Clan Regulation",
