--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -6,7 +6,8 @@
     "GIFTS": "Regalos",
     "REGULATION": "Regulación",
     "BOX_NOTATION": "Notación de cofres",
-    "CRYPTING": "Crypting"
+    "CRYPTING": "Crypting",
+    "RESEARCH": "Investigación"
   },
   "LAW": {
     "TITLE": "Regulaciones del clan VKG",
