--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -6,7 +6,8 @@
     "GIFTS": "Cadeaux",
     "REGULATION": "Réglementation",
     "BOX_NOTATION": "Notation des coffres",
-    "CRYPTING": "Crypting"
+    "CRYPTING": "Crypting",
+    "RESEARCH": "Recherches"
   },
   "LAW": {
     "TITLE": "Réglementation du clan VKG",
