--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -7,7 +7,7 @@
     "REGULATION": "Regulación",
     "BOX_NOTATION": "Notación de cofres",
     "CRYPTING": "Crypting",
-    "RESEARCH": "Investigación"
+    "RESEARCH": "Costo investigación"
   },
   "LAW": {
     "TITLE": "Regulaciones del clan VKG",
