--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -6,8 +6,8 @@
     "GIFTS": "Cadeaux",
     "REGULATION": "Réglementation",
     "BOX_NOTATION": "Notation des coffres",
-    "CRYPTING": "Crypting",
-    "RESEARCH": "Recherches"
+    "CRYPTING": "Cryptage",
+    "RESEARCH": "Coût de recherches"
   },
   "LAW": {
     "TITLE": "Réglementation du clan VKG",
