--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -22,7 +22,7 @@
             "G9": "G9 : 5,500 points of Common / Rare Crypts AND 7,500 points of Epics / Citadels"
           },
           "ASGARD": {
-            "TITLE": "Asgard Weekly Norms",
+            "TITLE": "Legacy Weekly Norms",
             "G7": "Up to G7 : 15,000 points",
             "G8": "G8 : 20,000 points",
             "G9": "G9 : 27,000 points"
