--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -22,7 +22,7 @@
             "G9": "G9 : 5500 puntos de Criptas Comunes / Raras Y 7500 puntos de Épicas / Ciudadelas"
           },
           "ASGARD": {
-            "TITLE": "Normas hebdomantes para Asgard",
+            "TITLE": "Normas hebdomantes para Legacy",
             "G7": "Hasta el G7 : 15,000 puntos",
             "G8": "G8 : 20,000 puntos",
             "G9": "G9 : 27,000 puntos"
