--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -22,7 +22,7 @@
             "G9": "G9 : 5500 points de Cryptes Communes / Rares ET 7500 points d'Épics / Citadelles"
           },
           "ASGARD": {
-            "TITLE": "Normes hebdomadaires pour Asgard",
+            "TITLE": "Normes hebdomadaires pour Legacy",
             "G7": "Jusqu'à G7 : 15,000 points",
             "G8": "G8 : 20,000 points",
             "G9": "G9 : 27,000 points"
